Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/MemberOver.out
MemberOver.java:13:9: compiler.err.intf.annotation.member.clash: hashCode(), java.lang.annotation.Annotation
1 error
